update api